# packetpulse-dpi-system

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  kafka_consumer_debug.py  requirements.txt  start.py
api/: data_loader.py  main.py  mock_data.py
api/models/: __init__.py  sni.py  stats.py
api/routes/: __init__.py  alerts.py  flows.py  sni.py  stats.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  api.js  config.js  index.css
dashboard/src/components/: AlertsList.jsx  AppDistributionChart.jsx  AppPieChart.jsx  DomainTable.jsx  FlowsTable.jsx  LiveTrafficChart.jsx  StatsCards.jsx  TrafficChart.jsx
dashboard/src/components/effects/: CyberCursor.jsx  MatrixIntro.jsx  NetworkBackground.jsx  TypeWriter.jsx
dashboard/src/context/: DPIContext.jsx
dashboard/src/hooks/: useCountUp.js
dashboard/src/pages/: AlertsPage.jsx  DashboardPage.jsx  FlowsPage.jsx
include/: json_exporter.h
packet_service/: kafka_producer.cpp  kafka_producer.h  logger.h  main.cpp
services/api_gateway/: Dockerfile  auth.py  connection_manager.py  data_loader.py  main.py  requirements.txt
services/api_gateway/models/: flows.py
services/api_gateway/routes/: __init__.py  admin.py  alerts.py  flows.py  stats.py  ws.py
services/db/: crud.py
services/detection_service/: Dockerfile  config.py  main.py  ml_engine.py  rule_engine.py
services/packet_service/: CMakeLists.txt  Dockerfile  capture_engine.cpp  capture_engine.h  health_server.h  logger.h  main.cpp  packet_types.h  parser.cpp  parser.h
services/processing_service/: Dockerfile  config.py  flow_tracker.py  main.py  stats.py
src/cli/: dpi_engine_main.cpp  dpi_single_thread_main.cpp  packet_summary_main.cpp  sni_inspector_main.cpp
